# Momo.co

./: CONTEXT.md  Cargo.toml  README.md
boru/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
boru/docs/: CLI_USAGE.md  MOMO_INTEGRATION.md  PHASE1_CHECKLIST.md  SECCOMP_PLAN.md  THREAT_MODEL.md  WASM_SANDBOX.md  seccomp-bpf.md
boru/gui/: PLACEHOLDER.md
boru/src/: main.rs
boru/src/cage/: mod.rs  policy.rs  verdict.rs
boru/src/classifier/: magic.rs  mod.rs
boru/src/config/: custom.toml  mod.rs
boru/src/iam/: agent.rs  mod.rs
boru/src/intercept/: audit.rs  mod.rs  quarantine.rs
boru/src/runner/: archive.rs  binary.rs  heuristic.rs  interpreter.rs  mod.rs  scanner.rs  wasm.rs
boru/src/scanner/: dirscan.rs  entropy.rs  mod.rs
boru/src/session/: mod.rs  replay.rs
boru/src/shadow/: mod.rs  rollback.rs
boru/src/sinkhole/: capture.rs  mod.rs  report.rs
boru/src/socket/: config.rs  ecosystem.rs  mod.rs  stubs.rs
boru/src/threat/: hashdb.rs  mod.rs
boru/src/tui/: mod.rs
boru/src/watchdog/: mod.rs
src/: main.rs
src/hasher/: mod.rs
src/models/: mod.rs
src/walker/: mod.rs
